[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/Waffles/Editor/Nodes/Dialogue Node.gd" type="Script" id=1]

[node name="Dialogue Node" type="GraphNode" groups=["graph_node"]]
margin_right = 202.0
margin_bottom = 143.0
title = "Dialogue Node"
show_close = true
resizable = true
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
slot/1/left_enabled = true
slot/1/left_type = 0
slot/1/left_color = Color( 1, 1, 1, 1 )
slot/1/right_enabled = true
slot/1/right_type = 0
slot/1/right_color = Color( 1, 1, 1, 1 )
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color( 1, 1, 1, 1 )
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color( 1, 1, 1, 1 )
slot/3/left_enabled = false
slot/3/left_type = 0
slot/3/left_color = Color( 1, 1, 1, 1 )
slot/3/right_enabled = false
slot/3/right_type = 0
slot/3/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 1 )

[node name="character" type="OptionButton" parent="."]
margin_left = 16.0
margin_top = 24.0
margin_right = 186.0
margin_bottom = 44.0

[node name="TextEdit" type="TextEdit" parent="."]
margin_left = 16.0
margin_top = 45.0
margin_right = 186.0
margin_bottom = 126.0
rect_min_size = Vector2( 0, 60 )
size_flags_vertical = 3
smooth_scrolling = true
wrap_enabled = true

[node name="portrait" type="OptionButton" parent="."]
visible = false
margin_left = 16.0
margin_top = 106.0
margin_right = 164.0
margin_bottom = 126.0
text = "Portrait"

[node name="Control" type="Control" parent="."]
margin_left = 16.0
margin_top = 127.0
margin_right = 186.0
margin_bottom = 137.0
rect_min_size = Vector2( 0, 10 )

[connection signal="close_request" from="." to="." method="_on_Dialogue_Node_close_request"]
[connection signal="resize_request" from="." to="." method="_on_Dialogue_Node_resize_request"]
[connection signal="item_selected" from="character" to="." method="_on_character_item_selected"]
